tests/cmd_fix_bad.out
./cmd_fix_bad.svx:2:9: error: Expecting numeric field, found ""
./cmd_fix_bad.svx:3:11: error: Expecting numeric field, found ""
./cmd_fix_bad.svx:4:30: error: Expecting numeric field, found ""
./cmd_fix_bad.svx:5:35: error: Expecting numeric field, found ""
./cmd_fix_bad.svx:6:12: error: Expecting numeric field, found "test"
./cmd_fix_bad.svx:8:20: error: Expecting numeric field, found ""
./cmd_fix_bad.svx:9:22: error: Expecting numeric field, found ""
./cmd_fix_bad.svx:10:41: error: Expecting numeric field, found ""
./cmd_fix_bad.svx:11:46: error: Expecting numeric field, found ""
./cmd_fix_bad.svx:12:23: error: Expecting numeric field, found "test"
./cmd_fix_bad.svx:14:32: error: Standard deviation must be positive
./cmd_fix_bad.svx:15:32: error: Standard deviation must be positive
./cmd_fix_bad.svx:16:32: error: Standard deviation must be positive
./cmd_fix_bad.svx:17:34: error: Standard deviation must be positive
./cmd_fix_bad.svx:18:34: error: Standard deviation must be positive
./cmd_fix_bad.svx:19:34: error: Standard deviation must be positive
./cmd_fix_bad.svx:20:34: error: Standard deviation must be positive
./cmd_fix_bad.svx:21:33: error: Standard deviation must be positive
./cmd_fix_bad.svx:22:33: error: Standard deviation must be positive
./cmd_fix_bad.svx:23:34: error: Standard deviation must be positive
./cmd_fix_bad.svx:24:34: error: Standard deviation must be positive
./cmd_fix_bad.svx:25:33: error: Standard deviation must be positive
./cmd_fix_bad.svx:26:33: error: Standard deviation must be positive
./cmd_fix_bad.svx:27:34: error: Standard deviation must be positive
./cmd_fix_bad.svx:28:32: error: Standard deviation must be positive
./cmd_fix_bad.svx:29:36: error: Standard deviation must be positive
./cmd_fix_bad.svx:30:36: error: Standard deviation must be positive
./cmd_fix_bad.svx:31:40: error: Standard deviation must be positive
./cmd_fix_bad.svx:32:32: error: Standard deviation must be positive
./cmd_fix_bad.svx:33:36: error: Standard deviation must be positive
./cmd_fix_bad.svx:34:40: error: Standard deviation must be positive
./cmd_fix_bad.svx:35:32: error: Standard deviation must be positive
./cmd_fix_bad.svx:36:32: error: Standard deviation must be positive
./cmd_fix_bad.svx:37:36: error: Standard deviation must be positive
./cmd_fix_bad.svx:38:34: error: Standard deviation must be positive
./cmd_fix_bad.svx:39:38: error: Standard deviation must be positive
./cmd_fix_bad.svx:40:42: error: Standard deviation must be positive
./cmd_fix_bad.svx:41:34: error: Standard deviation must be positive
./cmd_fix_bad.svx:42:34: error: Standard deviation must be positive
./cmd_fix_bad.svx:43:38: error: Standard deviation must be positive

Removing trailing traverses...

Concatenating traverses...

Simplifying network...

Calculating network...

Calculating traverses...

Calculating trailing traverses...

Calculating statistics...

Survey contains 1 survey station, joined by 0 legs.
There are 0 loops.
Total length of survey legs =    0.00m (   0.00m adjusted)
Total plan length of survey legs =    0.00m
Total vertical length of survey legs =    0.00m
   1 0-node.
There were 0 warning(s) and 40 error(s) - no output files produced.
